# finufft

./: .bumpversion.cfg  .clang-format  .clang-tidy  .gersemirc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CMakeLists.txt  CMakePresets.json  C____Linux.json  C____MacOS_clang.json  C____MacOS_gcc.json  GuruInterfaceBranch_BrainDump  INSTALL  INSTALL.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  TODO  accuracycheck_2d.cu  besseli.h  cmake_ci__cmake-ci__macos-14__gcc-14.json  cmake_ci__cmake-ci__macos-15__llvm.json  cmake_ci__cmake-ci__ubuntu-22.04__clang-15.json  cmake_ci__cmake-ci__ubuntu-22.04__clang-16.json  cmake_ci__cmake-ci__ubuntu-22.04__clang-17.json  cmake_ci__cmake-ci__ubuntu-22.04__gcc-10.json  cmake_ci__cmake-ci__ubuntu-22.04__gcc-11.json  cmake_ci__cmake-ci__ubuntu-22.04__gcc-12.json  cmake_ci__cmake-ci__ubuntu-24.04__clang-18.json  cmake_ci__cmake-ci__ubuntu-24.04__clang-19.json  (+61 more)
cufinufft/: CHANGELOG  CMakeLists.txt  Jenkinsfile  README.md  setup.py
devel/: CMakeLists.txt  ES_old_routines.cpp  ESlocalpoly.m  GuruInterfaceBranch_BrainDump  KB_old_routines.cpp  PolynomialRegression.hpp  README  TODO  accuracy_test_1d1.cpp  agenda_11-27-23.txt  analyse_sigma.py  analyse_upsamp.py  badness.m  bench_pswf.cpp  binsort_bench.cpp  calibrate_upsampfac.cpp  calibrate_upsampfac.py  chebyshev.cpp  check_dumbinputs.cmake  check_saddle.m  cmaes.m  compare_foldrescale_PR440_laptop5700U.txt  contours.m  cufinufft_tasks_meeting_Jun2023.txt  designker.m  designker_1.m  eval_ker_expts.cpp  eval_ker_expts2.cpp  eval_ker_expts_libin_simd64.cpp  eval_ker_expts_ludvig.cpp  expsqrtbetas.m  expsqrtbetas.txt  fig_speed_ker_ppval.m  find_sigma_bound.cpp  find_sigma_bound.py  finufft_meeting-7-5-23.txt  foldrescale.cpp  foldrescale.sh  foldrescale_finufft1d.txt  foldrescale_perf.cpp  (+34 more)
docs/: c.rst  (+72 more)
examples/: CMakeLists.txt  README  big2d2f.cpp  checkallaccs.sh  compare_2d.cu  cufinufft2d1_test.cu  cufinufft2d1many_test.cu  cufinufft2d2_test.cu  cufinufft2d2many_test.cu  cufinufft2d_test.cu  cufinufft3d1_test.cu  cufinufft3d2_test.cu  example1d1.cpp  example1d1c.c  example1d1cf.c  example1d1f.cpp  example2d1.cpp  example2d1many.cpp  example2d1many.py  example2d2many.cpp  example2d2many.py  finufft1d_test.cpp  finufft2d_test.cpp  finufft3d_test.cpp  guru1d1.cpp  guru1d1c.c  guru1d1f.cpp  guru2d1  guru2d1.cpp  guru2d1_adjoint.cpp  gurumany1d1.cpp  highaspect3d_test.sh  interp_2d.cu  interp_3d.cu  main_1d.cu  main_2d.cu  many1d1.cpp  mycpuinfo.sh  nuffttest1d.sh  nuffttestnd.sh  (+18 more)
fortran/: CMakeLists.txt  README  cmcl_license.txt  cnufftspread_f.cpp  cnufftspread_f.h  dirft1d.f  dirft1df.f  dirft2d.f  dirft2df.f  dirft3df.f  finufft1dtemp.f  finufft_f.cpp  finufft_f.h  finufft_f_legacy.cpp  finufftfort.cpp  guru1d_demo.f  nufft1d_demo.f  nufft1d_demof.f  nufft1d_demof90.f  nufft2d_demo.f  nufft2d_demof.f  nufft2d_demof90.f  nufft2dmany_demo.f  nufft2dmany_demof.f  nufft3d_demo.f  nufft3d_demof90.f  prini.f  spread_demo.f.maybekillit
matlab/: CMakeLists.txt  Contents.m  README  addmhelp.sh  big1dtest.m  check_finufft.m  check_modeords.m  compile_mex_cnufftspread.m  compile_mex_finufft_mex.m  cufinufft.cu  cufinufft.mw  cufinufft1d1.docsrc  cufinufft1d1.m  cufinufft1d2.docsrc  cufinufft1d2.m  cufinufft1d3.docsrc  cufinufft1d3.m  cufinufft2d1.docsrc  cufinufft2d1.m  cufinufft2d2.docsrc  cufinufft2d2.m  cufinufft2d3.docsrc  cufinufft2d3.m  cufinufft3d1.docsrc  cufinufft3d1.m  cufinufft3d2.docsrc  cufinufft3d2.m  cufinufft3d3.docsrc  cufinufft3d3.m  cufinufft_plan.docsrc  cufinufft_plan.m  errhandler.m  finufft.cpp  finufft.mex  finufft.mexa64  finufft.mw  finufft1d1.docsrc  finufft1d1.m  finufft1d1_mex.m  finufft1d2.docsrc  (+54 more)
perftest/: CMakeLists.txt  README  bench.py  benchmark_1d_spread.cpp  benchmark_1d_type1.cpp  benchmark_1d_type3.cpp  benchmark_spread.cpp  benchmarkdefault.cpp  big2d2f.cpp  binsort_bench.cpp  checkGuruTiming.sh  codspeed_benchmark.cpp  compare_spreads.jl  getSpeedup.sh  guru_timing_test.cpp  manysmallprobs.cpp  multispreadtestndall.sh  mymaxthreads.sh  mynumcores.sh  nuffttest2d.sh  nuffttest3d.sh  nuffttestnd.sh  params.csv  perftest.cpp  perftest.sh  perftest_config.py  perftest_helpers.py  perftest_pr_head.py  run_perftest_ci.py  searchForTimeMetrics.py  spread_benchmark.cpp  spreadbenchmark.py  spreaderbench.py  spreadingSchemeStats.py  spreadtestall.sh  spreadtestnd.cpp  spreadtestnd.sh  spreadtestndall.cpp  spreadtestndsweep.sh  testing_utils.h  (+1 more)
python/: .gitignore  CMakeLists.txt  README.md  README.rst  TODO  cufinufft.py  demo.py  finufftpy.cpp  ndarray.h  requirements.txt  setup.py  test.py  utils.py
src/: CMakeLists.txt  README  c_interface.cpp  cnufftspread.cpp  cnufftspread.h  cnufftspread_c.cpp  cnufftspread_c.h  cnufftspread_sep.cpp  common.cpp  common.cu  common.h  common_tempinstant.cpp  cudeconvolve.h  cufinufft.cu  cufinufft.h  cufinufft2d.cu  cufinufftc.cpp  cuspreadinterp.h  dataTypes.h  deconvolve.h  deconvolve_wrapper.cu  defs.h  dirft.h  dirft1d.cpp  dirft2d.cpp  dirft3d.cpp  execute.cpp  fft.cpp  fftw_defs.h  fftw_util.cpp  finufft.cpp  finufft.h  finufft.vcxproj  finufft1d.cpp  finufft1d.f  finufft1d.h  finufft1d_old.cpp  finufft2d.cpp  finufft2d_old.cpp  finufft3d.cpp  (+54 more)
test/: CMakeLists.txt  MultiThreadingBeGone  README  accuracy_test.cpp  accuracycheck_2d.cu  adjointness.cpp  basicpassfail.cpp  basicpassfail.vcxproj  basicpassfailf.vcxproj  check1d.sh  check2d.sh  check3d.sh  checkGuruTiming.sh  check_finufft.sh  checkallaccs.sh  cufinufft1d1_test.cu  cufinufft1d2_test.cu  cufinufft2d1_test.cu  cufinufft2d1many_test.cu  cufinufft2d1nupts_test.cu  cufinufft2d2_test.cu  cufinufft2d2api_test.cu  cufinufft2d2api_test_32.cu  cufinufft2d2many_test.cu  cufinufft3d1_test.cu  cufinufft3d2_test.cu  dumbInputsGuru.cpp  dumbinputs.cpp  error_handling.c  eval_ker_expts.cpp  fftw_lock_test.cpp  find_sigma_bounds.cpp  finufft1d_basicpassfail.cpp  finufft1d_test.cpp  finufft1d_test.vcxproj  finufft1dmany_test.cpp  finufft1f_test.vcxproj  (+64 more)
(+1029 files in other folders)
