[build-system]
requires = [
    "scikit-build-core >= 0.4.3",
    "ninja; platform_system != 'Windows'"
]

build-backend = "scikit_build_core.build"

[project]
name = "finufft"
version = "2.2.0"
description = "Python bindings for the FINUFFT C++ library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy >= 1.12.0"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

cmake.targets = ["finufft"]
cmake.define = {"FINUFFT_BUILD_PYTHON" = "ON"}

wheel.packages = ["python/finufft/finufft"]

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
